<resources>
    <string name="app_name">financesProject</string>
    <string name="category">Category</string>
    <string name="_0_00">$0.00</string>
    <string name="new_income">New Income</string>
    <string name="expense">Expense</string>
    <string name="balance_1_000">Balance: $1,000</string>
    <string name="income">Income</string>
    <string name="new_expense">New expense</string>
    <string name="todo">TODO</string>
</resources>